Text unreadable fix
The color was black when you were about to make a thread.
Changed color from default black to white on b & form in style.css

--- a/style.css
+++ b/style.css
@@ -16,6 +16,14 @@ h3{
 	color:cyan;
 }
 
+b {
+	color:white;
+}
+
+form{
+	color:red;
+}
+
 .created_on{
 	color:grey;
 }
